# literev-legal-deps

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .prettierignore  .sugar.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
conda/: dev.yaml  prod.yaml
containers/: Dockerfile  compose.dev.yaml  compose.prod.yaml
containers/scripts/: activate.sh  entrypoint.sh  install-deps.sh
