[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "literev"
version = "0.11.0"  # semantic-release
description = "scientific tool"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [
  {name = "Aziza", email = "FatmaAziza.Merzouki@unige.ch"},
  {name = "Erol", email = "Erol.Orel@unige.ch"},
]
dependencies = [
  "elasticsearch (>=8.12.1,<9.0.0)",
  "django >=5.0.3",
  "django-environ >=0.10.0",
  "psycopg2-binary >=2.9.9",
  "celery >=5.3.6",
  "redis >=5.0.3",
  "scikit-learn >=1.4.2",
  "spacy >=3.8.0",
  "fr-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl",
  "fr-core-news-md @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.8.0/fr_core_news_md-3.8.0-py3-none-any.whl",
  "gensim>=4.3.2",
  "pip>=24.0",
  "lingua-language-detector>=2.0.2",
  "hdbscan>=0.8.33",
  "optuna>=3.6.1",
  "pacmap>=0.7.2",
  "bokeh>=3.4.0",
  "pandas>=2.2.1",
  "scipy<=1.12.0",
  "openai>=1.20.0",
  "tiktoken>=0.8.0",
  "tbb>=2021.12.0",
  "distinctipy>=1.3.4",
  "matplotlib>=3.9.2",
  "werkzeug>=3",
  "djangorestframework>=3.15.2",
  "rago>=0.9.0",
  "langchain>=0.3.6",
  "django-filter>=24.3",
  "jsbeautifier (==1.15.1)",
]

[tool.poetry]
packages = [
    { include = "literev/*.py", from = "src" },
]
package-mode = false

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.10,<3.11.dev0"
torch = [
  {version = ">=2.5.0", source="pytorch-cpu"},
]
torchvision = [
  {version = ">=0.20.0", source="pytorch-cpu"},
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
jupyterlab = "^4.1.4"
pytest-cov = ">=5"
pytest-django = "^4.9.0"
pre-commit = ">=3.0.0"
bandit = ">=1.7.5"
compose-go = ">=2.23.0"
containers-sugar = {version = "1.16.1", extras = ["tui"]}
django-stubs = "<4.2.5"
django-stubs-ext = "<4.2.5"
django-debug-toolbar = ">=4.1.0"
django-extensions = ">=3.2.3"
djlint = ">=1.32.1"
ipython = ">=8.14.0"
jupyter = ">=1"
makim = "1.20.0"
mccabe = ">=0.7.0"
mypy = ">=1.8" # issue: https://github.com/typeddjango/django-stubs/issues/1802
notebook = ">=6.5.4"
pdbpp = ">=0.10.3"
ruff = ">=0.1.5"
vulture = ">=2.7"
django-coverage-plugin = ">=3.1"
